Absolute Shape Keys not working in 2.6 #30814

Closed
opened 2012-04-04 19:12:42 +02:00 by Philippe Roubal · 4 comments

%%%Hello, I am trying to convert to Blender 2.62 without success some of my previous models made with Blender 2.49b, and especially some standalone self animated objects using Absolute Shape Keys. It is very frustrating because in the past I mastered AVK and RVK features, and even made some tutorials and assets for others. For example I had made some standalone pedestrians that I packed in a file for Blended Cities script writen by Jérôme Mahieux, aka Littleneo. These characters don't work any more in 2.6x and I can only use Relative Keys.

I spent days trying to rebuild the animations from scratch, but only Relative keys seem to work. I haven't been able to find out a way to use Absolute keys.

I posted about this trouble on Blenderartists.org, and some people told me that Absolute Shape Keys are broken since Blender 2.58. As I found no informations in Blender 2.6 Wiki manual and forums, as well as in the Bug tracker list, I post the question/report now here.

So, please could you tell me if Absolute Shape Keys are actually known as broken, or if not could you provide me a source of information (link) about that feature ?

Thanks in advance.

Best regards,

Philippe.%%%

%%%Hello, I am trying to convert to Blender 2.62 without success some of my previous models made with Blender 2.49b, and especially some standalone self animated objects using Absolute Shape Keys. It is very frustrating because in the past I mastered AVK and RVK features, and even made some tutorials and assets for others. For example I had made some standalone pedestrians that I packed in a file for Blended Cities script writen by Jérôme Mahieux, aka Littleneo. These characters don't work any more in 2.6x and I can only use Relative Keys. I spent days trying to rebuild the animations from scratch, but only Relative keys seem to work. I haven't been able to find out a way to use Absolute keys. I posted about this trouble on Blenderartists.org, and some people told me that Absolute Shape Keys are broken since Blender 2.58. As I found no informations in Blender 2.6 Wiki manual and forums, as well as in the Bug tracker list, I post the question/report now here. So, please could you tell me if Absolute Shape Keys are actually known as broken, or if not could you provide me a source of information (link) about that feature ? Thanks in advance. Best regards, Philippe.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed with a number of recent commits.

changes are:

  • shape keys now have an Evaluation Time property you need to animate (similar to the time IPO).
  • new shape keys will use the current evaluation time for their position, not the current global frame number.
  • there is an operator to reset the time of existing shape keys (small refresh icon that displays when relative is disabled).

test r45413. or newer.

closing.%%%

%%%fixed with a number of recent commits. changes are: - shape keys now have an `Evaluation Time` property you need to animate (similar to the time IPO). - new shape keys will use the current `evaluation time` for their position, not the current global frame number. - there is an operator to reset the time of existing shape keys (small refresh icon that displays when relative is disabled). test r45413. or newer. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thank you very much for the answer. I will try with recent revision.

Best regards,

Philippe.%%%

%%%Thank you very much for the answer. I will try with recent revision. Best regards, Philippe.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30814
No description provided.