source/blender/makesrna/intern/rna_key.c
@@ -33,6 +33,7 @@
 #include "rna_internal.h"
 
 #include "DNA_ID.h"
+#include "DNA_scene_types.h"
 #include "DNA_curve_types.h"
 #include "DNA_key_types.h"
 #include "DNA_lattice_types.h"
@@ -620,7 +621,15 @@ static void rna_def_key(BlenderRNA *brna)
 
 	prop = RNA_def_property(srna, "use_relative", PROP_BOOLEAN, PROP_NONE);
 	RNA_def_property_boolean_sdna(prop, NULL, "type", KEY_RELATIVE);
-	RNA_def_property_ui_text(prop, "Relative", "Make shape keys relative");
+	RNA_def_property_ui_text(prop, "Relative",
+	                         "Make shape keys relative, "
+	                         "otherwise play through shapes as a sequence using the evaluation time");
+	RNA_def_property_update(prop, 0, "rna_Key_update_data");
+
+	prop = RNA_def_property(srna, "eval_time", PROP_FLOAT, PROP_NONE);
+	RNA_def_property_float_sdna(prop, NULL, "ctime");
+	RNA_def_property_range(prop, MINFRAME, MAXFRAME);
+	RNA_def_property_ui_text(prop, "Evaluation Time", "Evaluation time for absolute shape keys");
 	RNA_def_property_update(prop, 0, "rna_Key_update_data");
 
 	prop = RNA_def_property(srna, "slurph", PROP_INT, PROP_UNSIGNED);
